# post-retrieval-reasoning

./: .gitignore  AAAI2027_投稿流程说明.md  EXPERIMENT_DESIGN_AND_EXECUTION_PLAN_v1.0.md  FINAL_EXPERIMENTAL_PROTOCOL_v1.0.md  README.md  experiment.md  formulation.md  introduction.md  oracle_evidence_reasoning_failure_review-1.docx  other_may_help.md  pyproject.toml  references.md  related_work_citations.md  related_work_layering.md  run_experiments.sh  session_log.md  theory.md  纲要.md  纲要_初稿大纲.md
0710_j-space讨论/: J-Space_2026-07-10.tex  J-Space_README.md
AAAI_oral_example/Tables/: app_Epbench_20.tex  app_ablation_gsw.tex  app_baseline_parameters.tex  app_sectionD_Queries.tex  app_sectionD_perf.tex  data_content.tex  data_content_2000.tex  epbench_2000_bootstrap.tex  epbench_2000_short.tex  epbench_200_bootstrap.tex  operator_dataset_stats.tex  operatorframeworks.tex  token_count.tex
experiments/: README.md
experiments/atm_hard31_solvability_audit/: HARD31_SOLVABILITY_AUDIT.md  MODEL_ANSWER_CROSSCHECK.md  README.md  audit_labels.json  audit_rows.json  build_audit.py  build_model_answer_crosscheck.py  model_answer_findings.json  model_answer_rows.json
experiments/atm_oracle_evidence/: README.md
experiments/atm_oracle_evidence/reports/: failure_cases.md
experiments/atm_oracle_evidence/scripts/: build_failure_case_report.py  run_mimo_v25_raw_hard.sh  run_mimo_v25_sgm_hard.sh
experiments/atm_oracle_evidence_verbal-R3/: .gitignore  PROTOCOL.md  README.md
experiments/atm_oracle_evidence_verbal-R3/configs/: verbal_r3_official.json
experiments/atm_oracle_evidence_verbal-R3/scripts/: finalize_run.py  run_experiment.sh  verbal_r3_core.py  verbal_r3_oracle.py
experiments/atm_oracle_evidence_verbal-R3/tests/: test_verbal_r3_oracle.py
experiments/post_retrieval_jspace_v1/: API_INCIDENTS.md  BEHAVIOR_INCIDENTS.md  EVENING_JLENS_RUNBOOK.md  OPENCODE_SETUP.md  PROTOCOL_ADDENDUM_v1.0.md  README.md  RESOURCE_INCIDENTS.md
experiments/post_retrieval_jspace_v1/adapters/: __init__.py  api_chat.py  atm.py  hf_model.py
experiments/post_retrieval_jspace_v1/behavior/: __init__.py  evaluate.py  judge_preflight.py  merge_shards.py  run_api_behavior.py  run_behavior.py  summarize_pair.py
experiments/post_retrieval_jspace_v1/core/: __init__.py  provenance.py  registry.py  run_contract.py
human-reading-doc/: OpenViking_analysis_report.md  oracle_evidence.md  现状.md
my_paper/: appendix.tex  custom.bib  main.aux  main.bbl  main.blg  main.tex
my_paper/Tables/: atm_diagnostic_placeholder.tex  stale_placeholder.tex
my_paper/sections/: 01_introduction.tex  02_problem.tex  03_framework.tex  04_atm_diagnostics.tex  05_stale_case.tex  06_related_work.tex  07_discussion_limitations.tex  08_conclusion.tex
(+104 files in other folders)
