[project]
name = "post-retrieval-reasoning"
version = "0.1.0"
description = "Controlled post-retrieval reasoning experiments for agent memory"
requires-python = ">=3.12,<3.13"
dependencies = [
  "accelerate>=1.14,<2",
  "datasets>=5,<6",
  "huggingface-hub>=1.23,<2",
  "jlens",
  "jsonlines>=4,<5",
  "jsonschema>=4.26,<5",
  "numpy>=2.2,<3",
  "openai>=2.20,<3",
  "opencv-python-headless>=4.11,<6",
  "pandas>=2.2,<4",
  "pillow>=11,<13",
  "pyarrow>=19,<26",
  "pyyaml>=6,<7",
  "qwen-vl-utils>=0.0.14,<0.1",
  "requests>=2.32,<3",
  "scipy>=1.15,<2",
  "sentence-transformers>=5,<6",
  "timm>=1,<2",
  "torch==2.6.0",
  "torchvision==0.21.0",
  "tqdm>=4.67,<5",
  "transformers>=5.5,<6",
  "zarr>=3,<4",
]

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "ruff>=0.15,<0.16",
]

[tool.uv]
package = false

[tool.uv.sources]
jlens = { path = "other_repo_references/jacobian-lens", editable = true }
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
testpaths = ["experiments"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py312"
